--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               </p>
               <h1 class="font-display mt-6 text-4xl sm:text-5xl lg:text-6xl leading-tight text-slate-900">
                 Your dealership software,
-                <span class="text-teal-700">running on your infrastructure.</span>
+                <span class="text-teal-700">running on your servers.</span>
               </h1>
               <p class="mt-5 max-w-2xl text-lg text-slate-700">
                 Buy once. Deploy on your own servers or private cloud. DealerHosted apps are built for daily dealership workflow without recurring SaaS lock-in.
